--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -16,7 +16,7 @@
         %ul.row.amount-list
           - if @is_payment # If payment, have one non-arbitrary button
             %li.col-xs-6.offset-sm-3
-              %a.btn.btn-secondary.active{ data: { amount: @initial_amount } }
+              %a.btn.btn-secondary.active{ data: { amount: @initial_amount * 100 } }
                 #{ @initial_amount }$
           - else
             - numbers = [10, 25, 50, 100, 200, 300, 500]
