--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,7 +1,6 @@
 /*
- * Revised manifest file
- * things from rails-assets
- *= require selectize/selectize.bootstrap3.scss
+ * Revised manifest file things from rails-assets
+ *= require selectize/selectize.bootstrap3
  */
 
 // TODO: import a manifest for assets here.
