--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -2,7 +2,7 @@
  * Revised manifest file
  * things from rails-assets
  *= require select2
- *= require selectize/selectize.bootstrap3.scss
+ *= require selectize/selectize.bootstrap3
  */
 
 /*!
