--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -108,22 +108,22 @@
 
           %hr
           .related-fields.mt-4
-            - if @bike.bike_codes.any?
+            - if @bike.bike_stickers.any?
               .form-group.row
                 %label.form-well-label
                   = t(".existing_stickers")
                 %p.form-well-input-static
 
-                  - @bike.bike_codes.each do |bike_code|
-                    = bike_code.pretty_code
+                  - @bike.bike_stickers.each do |bike_sticker|
+                    = bike_sticker.pretty_code
                     %br
             .form-group.row.no-divider-row.mb-0
-              = label_tag :bike_code, class: "form-well-label" do
+              = label_tag :bike_sticker, class: "form-well-label" do
                 - sticker_information_link = link_to t(".a_qr_sticker"), "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
                 = t(".add_a_sticker_label_html", sticker_information_link: sticker_information_link)
               .form-well-input
-                - bike_code_from_org = @bike.organizations.with_paid_feature_slugs("bike_codes").last&.bike_codes&.claimed&.reorder(:code_integer)&.second&.pretty_code
-                = text_field_tag :bike_code, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
+                - bike_code_from_org = @bike.organizations.with_paid_feature_slugs("bike_stickers").last&.bike_stickers&.claimed&.reorder(:code_integer)&.second&.pretty_code
+                = text_field_tag :bike_sticker, nil, class: 'form-control', placeholder: bike_code_from_org || "A0 100"
 
             = render "shared/form_well_footer_save"
 
