--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -291,8 +291,8 @@
             %td
               Stickers
             %td
-              - if @organization.paid_for?("bike_codes")
-                = link_to "Has stickers", admin_bike_codes_path(organization_id: @organization.to_param)
+              - if @organization.paid_for?("bike_stickers")
+                = link_to "Has stickers", admin_bike_stickers_path(organization_id: @organization.to_param)
               - else
                 %small.less-strong
                   no
