--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -47,17 +47,17 @@
                   - else
                     %em.small.less-strong
                       = t(".org_cannot_edit", org_name: passive_organization.short_name)
-              - if passive_organization.paid_for?("bike_codes") # Always display stickers if org has paid for them
+              - if passive_organization.paid_for?("bike_stickers") # Always display stickers if org has paid for them
                 %tr
                   %td
                     = t(".sticker")
                   %td
-                    - @bike.bike_codes.each do |bike_code|
-                      - if bike_code.organization.present?
-                        = link_to bike_code.code, edit_organization_sticker_path(id: bike_code.code, organization_id: bike_code.organization&.to_param)
+                    - @bike.bike_stickers.each do |bike_sticker|
+                      - if bike_sticker.organization.present?
+                        = link_to bike_sticker.code, edit_organization_sticker_path(id: bike_sticker.code, organization_id: bike_sticker.organization&.to_param)
                       - else
-                        = bike_code.code
-                    - if @bike.bike_codes.none?
+                        = bike_sticker.code
+                    - if @bike.bike_stickers.none?
                       - show_sticker_modal = true
                       %a{ href: "#", style: "opacity: 0.8; text-align: right;", data: { toggle: "modal", target: "#assignStickerModal" } }
                         = t(".link_sticker")
@@ -237,7 +237,7 @@
 - if show_sticker_modal
   - sticker_modal_body = capture_haml do
     .modal-body
-      = form_for BikeCode.new, { url: organization_sticker_path(id: "code", organization_id: passive_organization.to_param), action: "update", method: "PUT" } do |f|
+      = form_for BikeSticker.new, { url: organization_sticker_path(id: "code", organization_id: passive_organization.to_param), action: "update", method: "PUT" } do |f|
         = f.hidden_field :bike_id, value: @bike.id
         .form-group
           = f.label :code, t(".sticker_code"), class: "org-form-label"
