--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -10,17 +10,17 @@
         %small.less-strong
           = t(".no_one_but_the_user_and_bike_index_admins")
 
-  - if @bike_code.present?
+  - if @bike_sticker.present?
     .alert.alert-success
-      %p= t(".you_scanned_this_sticker_html", pretty_code: @bike_code.pretty_code, bike_type: @bike.type)
-      - if current_user&.authorized?(@bike_code)
+      %p= t(".you_scanned_this_sticker_html", pretty_code: @bike_sticker.pretty_code, bike_type: @bike.type)
+      - if current_user&.authorized?(@bike_sticker)
         %p.mt-2
           %em.less-strong
             = t(".is_this_linked_to_incorrect_bike")
             %a.gray-link{ href: "#updateBikeCodeLink", data: { toggle: "collapse" } }
               = t(".change_the_bike_sticker_linked_to")
         .collapse#updateBikeCodeLink
-          = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: :put, class: "row mt-4" do
+          = form_tag bike_sticker_path(id: @bike_sticker.code, organization_id: @bike_sticker.organization_id), method: :put, class: "row mt-4" do
             .col-sm-8.col-lg-10
               .form-group
                 = label_tag :bike_id, t(".switch_to_new_bike_id")
