--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -67,7 +67,7 @@
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.lightspeed_pos?
                   = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path, class: "nav-link"
-                - if passive_organization.paid_for?("bike_codes")
+                - if passive_organization.paid_for?("bike_stickers")
                   %li.divider-nav-item
                   %li
                     = active_link t(".registration_stickers"), organization_stickers_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
