--- a/app/views/organized/bikes/index.html.haml
+++ b/app/views/organized/bikes/index.html.haml
@@ -1,23 +1,23 @@
-- if @bike_code.present?
-  - if @bike_code.claimed?
+- if @bike_sticker.present?
+  - if @bike_sticker.claimed?
     %h2
-      %a{ href: edit_organization_sticker_path(organization_id: current_organization.to_param, id: @bike_code.code) }
-        = @bike_code.kind
-        = @bike_code.code
+      %a{ href: edit_organization_sticker_path(organization_id: current_organization.to_param, id: @bike_sticker.code) }
+        = @bike_sticker.kind
+        = @bike_sticker.code
       = t(".is_currently_linked")
 
     %p
-      - bike_link = link_to(@bike_code.bike&.title_string, bike_path(@bike_code.bike_id))
+      - bike_link = link_to(@bike_sticker.bike&.title_string, bike_path(@bike_sticker.bike_id))
       = t(".connected_to_bike_html", bike_link: bike_link)
   - else
     %h2
-      %a{ href: edit_organization_sticker_path(organization_id: current_organization.to_param, id: @bike_code.code) }
-        = @bike_code.kind
-        %em= @bike_code.code
+      %a{ href: edit_organization_sticker_path(organization_id: current_organization.to_param, id: @bike_sticker.code) }
+        = @bike_sticker.kind
+        %em= @bike_sticker.code
       = t(".isnt_linked_to_a_bike")
   %p
-    = t(".enter_url_of_the_bike_html", bike_code_kind: @bike_code.kind)
-  = form_tag bike_code_path(id: @bike_code.code, organization_id: current_organization.to_param), method: "PUT", class: "row" do
+    = t(".enter_url_of_the_bike_html", bike_sticker_kind: @bike_sticker.kind)
+  = form_tag bike_sticker_path(id: @bike_sticker.code, organization_id: current_organization.to_param), method: "PUT", class: "row" do
     .col-sm-8.col-lg-10
       .form-group
         = text_field_tag :bike_id, "", placeholder: "https://bikeindex.org/bikes/1234", class: "form-control"
@@ -26,8 +26,7 @@
 
   %p.less-strong
     - org_name = current_organization.short_name
-    - bike_code_kind = @bike_code.kind
-    = t(".search_org_bikes_html", org_name: org_name, bike_code_kind: bike_code_kind)
+    = t(".search_org_bikes_html", org_name: org_name, bike_sticker_kind: @bike_sticker.kind)
 
   %hr.mt-4.mb-4.less-strong
 - if current_organization.paid_for?("bike_search")
