--- a/app/views/organized/exports/show.html.haml
+++ b/app/views/organized/exports/show.html.haml
@@ -97,12 +97,12 @@
           %td= t(".stickers")
           %td
             - if @export.assign_bike_codes?
-              %em= t(".stickers_exported", bike_codes_count: @export.bike_codes&.count.to_i)
-              - if @export.bike_codes.any?
+              %em= t(".stickers_exported", bike_codes_count: @export.bike_stickers&.count.to_i)
+              - if @export.bike_stickers.any?
                 %ul.exported-link-list
-                  - bike_code_links = @export.bike_codes.each do |code, i|
+                  - bike_code_links = @export.bike_stickers.each do |code, i|
                     %li
-                      #{link_to code, edit_organization_sticker_path(code, organization_id: current_organization.to_param)}#{i == (@export.bike_codes.count - 1) ? "" : ","}
+                      #{link_to code, edit_organization_sticker_path(code, organization_id: current_organization.to_param)}#{i == (@export.bike_stickers.count - 1) ? "" : ","}
 
                 - if @export.bike_codes_removed?
                   %em.text-danger= t(".stickers_have_been_unassigned")
