--- a/app/views/admin/bike_stickers/_table.html.haml
+++ b/app/views/admin/bike_stickers/_table.html.haml
@@ -1,5 +1,5 @@
 - render_sortable ||= false
-- bike_code_batch_organizations = BikeCodeBatch.all.map { |b| [b.id.to_s, b.organization&.short_name] }.to_h
+- bike_code_batch_organizations = BikeStickerBatch.all.map { |b| [b.id.to_s, b.organization&.short_name] }.to_h
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm.without-exterior-border
     %thead.small-header
@@ -15,7 +15,7 @@
           Organization
       %th
         - if render_sortable
-          = sortable "bike_code_batch_id", "Batch"
+          = sortable "bike_sticker_batch_id", "Batch"
         - else
           Batch
       %th
@@ -41,10 +41,10 @@
             - if bike_sticker.organization.present?
               = link_to bike_sticker.organization.name, admin_bike_stickers_path(sortable_search_params.merge(organization_id: bike_sticker.organization_id))
           %td
-            - if bike_sticker.bike_code_batch.present?
-              = link_to bike_sticker.bike_code_batch_id, admin_bike_stickers_path(sortable_search_params.merge(search_bike_code_batch_id: bike_sticker.bike_code_batch_id))
+            - if bike_sticker.bike_sticker_batch.present?
+              = link_to bike_sticker.bike_sticker_batch_id, admin_bike_stickers_path(sortable_search_params.merge(search_bike_code_batch_id: bike_sticker.bike_sticker_batch_id))
               %small.less-strong
-                = bike_code_batch_organizations[bike_sticker.bike_code_batch_id.to_s]
+                = bike_code_batch_organizations[bike_sticker.bike_sticker_batch_id.to_s]
           %td
             - if bike_sticker.claimed? && bike_sticker.claimed_at.present?
               %span.convertTime
