add some additional payment stuff

--- a/app/views/admin/payments/edit.html.haml
+++ b/app/views/admin/payments/edit.html.haml
@@ -2,31 +2,8 @@
   .col-md-4
     %h1
       Edit Payment
-  .col-md-8
-    %table.table-list
-      %tr
-        %td
-          Kind
-        %td
-          %span.less-strong
-          = @payment.kind
-      %tr
-        %td
-          Amount
-        %td
-          = @payment.amount_formatted
-      - if @payment.stripe_id.present?
-        %tr
-          %td
-            Stripe ID
-          %td
-            = link_to @payment.stripe_id, "https://dashboard.stripe.com/payments/#{@payment.stripe_id}"
-      %tr
-        %td
-          For
-        %td
-          - if @payment.theft_alert.present?
-            = link_to "Theft alert", edit_admin_theft_alert_path(@payment.theft_alert)
+
+= render partial: "/admin/payments/display_table", locals: { payment: @payment }
 
 
 = form_for [:admin, @payment] do |f|
