--- a/app/views/admin/payments/index.html.haml
+++ b/app/views/admin/payments/index.html.haml
@@ -1,9 +1,26 @@
 .admin-subnav
-  .col-md-6
+  .col-md-5
     %h1
       Payments
-  .col-md-6
-    = link_to "New payment", new_admin_payment_url, class: "btn btn-success float-right"
+  .col-md-7
+    %ul
+      %li.nav-item
+        = link_to "New payment", new_admin_payment_url, class: "nav-link"
+      %li.nav-item
+        = link_to "graph", admin_payments_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
+
+/ - if @render_chart
+/   :ruby
+/     theft_alerts_graph = TheftAlertPlan.all.map do |theft_alert_plan|
+/       { name: theft_alert_plan.name, data: matching_theft_alerts.where(theft_alert_plan: theft_alert_plan).send(group_by_method(@time_range), "theft_alerts.created_at", range: @time_range, format: group_by_format(@time_range)).count }
+/     end
+/   .col-12.mt-2
+
+/     = column_chart theft_alerts_graph, stacked: true, thousands: ",", defer: true
+
+.col-12.mb-4.mt-2
+  .row.justify-content-end
+    = render partial: "/shared/period_select"
 
 .row.mb-4
   .col-md-6
